--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -1,3 +1,3 @@
-@import url('./reset.styl');
-@import url('./base.styl');
-@import url('./icon.styl');
+@import './reset.styl';
+@import './base.styl';
+@import './icon.styl';
